import React from "react";
import MenuItems from "../MenuItems";

import renderer from "react-test-renderer";
import { MockedProvider } from "@apollo/react-testing";

it("should render component when action is lend", () => {
  // const props = {
  //   closeMenu: jest.fn(),
  //   action: "lend"
  // };
  // const tree = renderer
  //   .create(
  //     <MockedProvider mocks={[]}>
  //       <MenuItems {...props} />
  //     </MockedProvider>
  //   )
  //   .toJSON();
  // expect(tree).toMatchSnapshot();
});

it("should render component when action is borrow", () => {
  // const props = {
  //   closeMenu: jest.fn(),
  //   action: "borrow"
  // };
  // const tree = renderer
  //   .create(
  //     <MockedProvider mocks={[]}>
  //       <MenuItems {...props} />
  //     </MockedProvider>
  //   )
  //   .toJSON();
  // expect(tree).toMatchSnapshot();
});
